--- a/src/app/js/directives/person-form.html
+++ b/src/app/js/directives/person-form.html
@@ -64,7 +64,7 @@
         <div data-ng-show="selectedPerson.alayksikko[0]" class="col-xs-12">
             <label for="unit" class="control-label" data-ng-bind="i18n.admin.content.form.alayksikko.label[lang]"></label>
             <div data-ng-repeat="a in selectedPerson.alayksikko track by $index" class="row mb-x">
-                <div class="col-xs-11">
+                <div class="col-xs-10">
                     <input disabled
                            id="unit"
                            type="text" class="form-control"
@@ -72,12 +72,12 @@
                            name="alayksikko"
                            data-ng-required="isFieldRequired('alayksikko')">
                 </div>
-                <div class="col-xs-1 pl-0">
+                <div class="col-xs-2 pl-0">
                         <span class="btn btn-danger"
                               data-ng-click="removeAlayksikko($index)"
                               data-ng-hide="selectedPerson.alayksikko.length<2"
                               title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                              data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
+                              data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">
                         </span>
                 </div>
             </div>
