Improve mailto link structure.

--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -124,8 +124,9 @@
                     {{i18n.footer.csc.name[lang]}}
                 </p>
                 <p>
-                    <a class="link-white" href="mailto:justus@csc.fi">justus@csc.fi</a>
-                    <i class="fa fa-envelope pl-x"></i>
+                    <a class="link-white" href="mailto:justus@csc.fi">justus@csc.fi
+                        <i class="fa fa-envelope pl-x" aria-hidden="true"></i>
+                    </a>
                 </p>
             </div>
         </div>
