Change alert text color.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1,8 +1,5 @@
 <div class="alert alert-default text-center text-secondary" data-ng-if="justus.julkaisu.id">
-  <h4>Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
-  <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">
-    Hylkää muutokset ja siirry alkuun
-  </button>
+  <span class="text-2xl text-dark">Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</span>
 </div>
 
 
