--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -1,6 +1,5 @@
-<div class="alert alert-default text-center" data-ng-if="justus.julkaisu.id">
-  <h4 class="text-secondary">Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
-  <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">Hylkää muutokset ja siirry alkuun</button>
+<div class="alert alert-default text-center text-secondary" data-ng-if="justus.julkaisu.id">
+  <span class="text-2xl text-dark">Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</span>
 </div>
 
 <uib-accordion class="text-secondary">
